# Lambda-Interpreter

./: Lambda-Interpreter.opam  README.md  dune-project  flake.nix
lib/: dune  lambda.ml  lambda.mli  lexer.mll  parser.mly
